--- a/app/components/header.hbs
+++ b/app/components/header.hbs
@@ -1,4 +1,4 @@
 <header>
-  <h1><a href="/">N.E.R.D. Riot!</a></h1>
+  <h1><LinkTo @route="index">N.E.R.D. Riot!</LinkTo></h1>
   <p>The places we used to haunt</p>
 </header>
