--- a/app/components/places.hbs
+++ b/app/components/places.hbs
@@ -1,4 +1,5 @@
 <ul class="places">
+  {{#each @model as |listing|}}
   <li>
     <PlaceListing
     @image="https://photos.app.goo.gl/QqpUbztDFmk6uux2A"
@@ -7,13 +8,6 @@
     <a href="/places/1" class="more">More</a>
     </PlaceListing>
   </li>
-  <li>
-    <PlaceListing
-    @image="https://photos.app.goo.gl/QqpUbztDFmk6uux2A"
-    @title="The Lounge"
-    >
-    <a href="/places/1" class="more">More</a>
-    </PlaceListing>
-  </li>
+  {{/each}}
   <li><a href="/places/new" class="add"><span>+</span></a></li>
 </ul>
